--- a/source/analysis-3.html.erb
+++ b/source/analysis-3.html.erb
@@ -8,8 +8,8 @@
           <li>Sélection</li>
           <li>Categorizarion</li>
           <li class="active">Connection PBSOL</li>
-          <li>Contradictions</li>
-          <li>Business Drivers</li>
+          <li class="next">Contradictions</li>
+          <li class="next">Business Drivers</li>
           <li class="next">Evaluation criteria</li>
           <li class="next">Evaluation</li>
         </ul>
