--- a/source/definition.html.erb
+++ b/source/definition.html.erb
@@ -13,7 +13,7 @@ menu_title: E-Latch
       <p class="text-left text-italic color-grey text-light mt">Please enter your project name and its description. You could also add other information like te starting date and the ending date. Adding members to the projects is also possible.</p>
     </div>
     <div class="col-sm-4">
-        <%= partial "partials/progress", :locals => { :percentage => "10", :step_name => "Patent analysis" } %>
+        <%= partial "partials/progress", :locals => { :percentage => "10", :step_name => "SUN diagram set-up" } %>
     </div>
   </div>
 </div>
@@ -92,7 +92,7 @@ menu_title: E-Latch
             </div>
           </div>
           <% end %>
-          <a href="#" class="btn btn--plus mt">Add a member</a>
+          <a href="#" class="btn btn--plus mt">Add a file</a>
         </div>
           
       </form>
