--- a/source/partials/_action-bar.html.erb
+++ b/source/partials/_action-bar.html.erb
@@ -5,7 +5,7 @@
 	<div class="pull-right">
 	  	<div class="clearfix">
 	  		<p class="color-white pull-left mr"><%= text %> <br><%= text2 %></p>
-	  		<%= link_to("Continue", "#{link}", class: "btn btn-default color-blue-2 pull-right") %>
+	  		<%= link_to("Continue", "#{link}", class: "btn btn-default color-blue-2 pull-right js-btn-loading") %>
 	  	</div>
 	</div>
 
