--- a/source/stylesheets/components/_form.scss
+++ b/source/stylesheets/components/_form.scss
@@ -25,6 +25,17 @@
 
 .search {
 	position: relative;
+	.js-float-label-wrapper {
+		&.focused {
+			label {
+				&:before {
+					content:"Your search";
+					display: block;
+				}
+				span {display: none;}
+			}
+		}
+	}
 	&__input {
 		font-size: 24px;
 		color: #A3D8F4;
@@ -33,6 +44,9 @@
 		font-weight: 100;
 		&:hover {
 			border-bottom: solid 1px $blue;
+		}
+		&:focus {
+			color: $blue;
 		}
 	}
 	&__btn {
@@ -44,7 +58,19 @@
 		font-size: 24px;
 		margin-right: 20px;
 	}
-	
+	&__filters {
+		@extend .list-inline;
+		.open > a{
+			color: $grey;
+			text-decoration: none;
+		}
+		> li > a {
+			color: $grey-light;
+			&:hover {
+				color: $blue;
+			}
+		}
+	}
 }
 
 .js-float-label-wrapper {
@@ -95,5 +121,5 @@
 .js-float-label-wrapper.populated input, 
 .js-float-label-wrapper.focused textarea, 
 .js-float-label-wrapper.populated textarea {
-	padding-top: 1.5em !important;
+	padding-top: 1em !important;
 }
