--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -9,6 +9,7 @@
 @import "form";
 @import "breadcrumb";
 @import "speedometer";
+@import "contradictions";
 @import "patent";
 @import "label";
 @import "mini-card";
