--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,24 +13,33 @@ title: Welcome to Pixseb
 	    </a>
 	    <ul class="nav navbar-nav pull-left">
 	      <li class="nav-item">
-	      	<%= link_to("Concept", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Concept", "#concept" , class:"nav-link p text-medium") %>
 	      </li>
 	      <li class="nav-item">
-	      	<%= link_to("Testimonials", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Testimonials", "#testimonials" , class:"nav-link p text-medium") %>
 	      </li>
 	      <li class="nav-item">
-	      	<%= link_to("Team", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Team", "#team" , class:"nav-link p text-medium") %>
 	      </li>
 	
 	    </ul>
 	    <ul class="nav navbar-nav pull-right">
 	
 	      <li class="nav-item">
-	     	 <%= link_to("Pricing", "home.html" , class:"nav-link p text-medium") %>
+	     	 <%= link_to("Pricing", "#" , class:"nav-link p text-medium") %>
 	      </li>
 	
-		  <li class="nav-item">
-		  <%= link_to("EN", "home.html" , class:"nav-link p text-medium") %>
+		  
+	      <li class="nav-item dropdown mr-">
+	        <a class="nav-link dropdown-toggle p text-medium" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+	        	EN 
+	        	<i class="ionicons ion-chevron-down ml-"></i></a>
+		        <div class="dropdown-menu p">
+		          <ul class="list-unstyled">
+		            <li><a class="dropdown-item" href="#">EN</a></li>
+		            <li><a class="dropdown-item" href="#">FR</a></li>
+		          </ul>
+		        </div>
 	      </li>
 	
 	      <a href="#signup" class="nav-item btn btn-outline color-white"  data-toggle="modal">Sign up</a>
@@ -62,7 +71,7 @@ title: Welcome to Pixseb
 	<a href="#" class="btn bg-pink btn-lg color-white">Sign in</a>
 </div>
 
-<div class="bg-white padded">
+<div class="bg-white padded" id="concept">
 
 	<h2 class="color-blue text-center text-condensed">Concept</h2>
 	<div class="container">
@@ -81,7 +90,7 @@ title: Welcome to Pixseb
 				</div>
 				<div class="col-sm-4">
 					<%= image_tag("presentation-icon.png", width:"80", class:"mb") %>
-					<h2 class="h1 mb">Visualiser</h2>
+					<h2 class="h1 mb">Collaborer</h2>
 					<p>Working with others. Export the complete report. Print The SUN Diagram © in poster. It's planned !</p>
 				</div>
 			</div>
@@ -91,7 +100,7 @@ title: Welcome to Pixseb
 </div>
 
 
-<div class=" padded">
+<div class=" padded" id="testimonials">
 
 	
 	<div class="container">
@@ -153,7 +162,7 @@ title: Welcome to Pixseb
 </div>
 
 
-<div class="bg-white padded">
+<div class="bg-white padded" id="team">
 
 	
 	<div class="container">
@@ -190,19 +199,19 @@ title: Welcome to Pixseb
 	    </a>
 	    <ul class="nav navbar-nav pull-left">
 	      <li class="nav-item">
-	      	<%= link_to("Press", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Press", "home-initial.html" , class:"nav-link p text-medium") %>
 	      </li>
 	      <li class="nav-item">
-	      	<%= link_to("Privacy", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Privacy", "home-initial.html" , class:"nav-link p text-medium") %>
 	      </li>
 	      <li class="nav-item">
-	      	<%= link_to("Terms", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Terms", "home-initial.html" , class:"nav-link p text-medium") %>
 	      </li>
 	      <li class="nav-item">
-	      	<%= link_to("Help center", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Help center", "home-initial.html" , class:"nav-link p text-medium") %>
 	      </li>
 	      <li class="nav-item">
-	      	<%= link_to("Contact", "home.html" , class:"nav-link p text-medium") %>
+	      	<%= link_to("Contact", "home-initial.html" , class:"nav-link p text-medium") %>
 	      </li>
 
 	    </ul>
@@ -232,14 +241,14 @@ title: Welcome to Pixseb
         <div class="modal-header">
           <button type="button" class="close btn btn-default" data-dismiss="modal" aria-hidden="true">&times;</button>
 
-          <h4 class="modal-title text-center">Connect to INOVIZ</h4>
+          <h4 class="modal-title text-center">Connect to Pixseb</h4>
         </div>
         <div class="modal-body">
           <div class="index__alert clearfix mb-">
             <p class="small-text">Identifiant et/ou mot de passe invalide</p>
             <a href="#" class="small-text">Oublié ?</a>
           </div>
-          <form action="" class="index__form">
+          <form action="home-initial.html" class="index__form">
             <div class="input-wrap js-float-label-wrapper">
               <label for="">Indentifiant</label>
               <input type="text" name="id" id="id" class="form-control">
@@ -249,7 +258,7 @@ title: Welcome to Pixseb
               <input type="password" name="current" id="current" class="form-control">
             </div>
             <div class="text-center mt">
-              <input type="submit" value="Login" class="btn btn-lg btn-round btn-dark white p- pl+ pr+ mb">
+              <input type="submit" value="Login" class="btn btn-lg btn-round bg-blue color-white p- pl+ pr+ mb mt">
               <div>
                 <label>
                   <input type="checkbox" id="inlineCheckbox1" value="option1"> Remember me
@@ -261,14 +270,7 @@ title: Welcome to Pixseb
         </div>
         <div class="modal-footer">
           <div class="text-center mt">
-            <a value="Login" class="btn btn-lg btn-round btn-blue white p- pl+ pr+">New user ? Sign up</a>
-            <div class="text-center mt mb">Or sign up with</div>
-            <div class="clearfix">
-              <a href="#" class="index__social index__social--facebook"><img src="images/facebook.png" alt="facebook"></a>
-              <a href="#" class="index__social index__social--linkedin"><img src="images/linkedin.png" alt="linkedin"></a>
-              <a href="#" class="index__social index__social--google"><img src="images/google.png" alt="google"></a>
-              <a href="#" class="index__social index__social--linkedin"><img src="images/twitter.png" alt="twitter"></a>
-            </div>
+            <a href="home-initial.html" value="Login" class="btn btn-lg btn-round btn-outline-blue color-blue p- pl+ pr+ mb mt">Sign up</a>
           </div>
         </div>
       </div>
@@ -282,26 +284,26 @@ title: Welcome to Pixseb
         <div class="modal-header">
           <button type="button" class="close btn btn-default" data-dismiss="modal" aria-hidden="true">&times;</button>
 
-          <h4 class="modal-title text-center">Signup to INOVIZ</h4>
+          <h4 class="modal-title text-center">Signup to Pixseb</h4>
         </div>
         <div class="modal-body">
-          <ul class="mb pl">
-            <li class="mb-">Bénéfice : lorem ipsum dolor sit amet</li>
-            <li class="mb-">Bénéfice : lorem ipsum dolor sit amet</li>
-            <li class="mb-">Bénéfice : lorem ipsum dolor sit amet</li>
+          <ul class="p">
+            <li class="font-14 mb-">Bénéfice : lorem ipsum dolor sit amet</li>
+            <li class="font-14 mb-">Bénéfice : lorem ipsum dolor sit amet</li>
+            <li class="font-14 mb-">Bénéfice : lorem ipsum dolor sit amet</li>
           </ul>
           <!-- Alert is hidden (display none) -->
           <div class="index__alert clearfix mb-">
             <p class="small-text">Identifiant et/ou mot de passe invalide</p>
             <a href="#" class="small-text">Oublié ?</a>
           </div>
-          <form action="" class="index__form">
+          <form action="home-initial.html" class="index__form">
             <div class="input-wrap js-float-label-wrapper">
-              <label for="">Prénom</label>
+              <label for="">First name</label>
               <input type="text" name="firstname" id="firstname" class="form-control">
             </div>
             <div class="input-wrap js-float-label-wrapper">
-              <label for="">Nom</label>
+              <label for="">Last name</label>
               <input type="text" name="lastname" id="lastname" class="form-control">
             </div>
             <div class="input-wrap js-float-label-wrapper">
@@ -322,21 +324,15 @@ title: Welcome to Pixseb
                   <input type="checkbox" id="inlineCheckbox1" value="option1"> I accept terms &amp; conditions
                 </label>
               </div>
-              <input type="submit" value="Sign up for free" class="btn btn-lg btn-round btn-dark white p- pl+ pr+ mb mt-">
+              <input type="submit" value="Sign up for free" class="btn btn-lg btn-round bg-blue color-white p- pl+ pr+ mb mt">
               
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <div class="text-center mt">
-            <a value="Login" class="btn btn-lg btn-round btn-blue white p- pl+ pr+">Already a user ? Login</a>
-            <div class="text-center mt mb">Or login with</div>
-            <div class="clearfix">
-              <a href="#" class="index__social index__social--facebook"><img src="images/facebook.png" alt="facebook"></a>
-              <a href="#" class="index__social index__social--linkedin"><img src="images/linkedin.png" alt="linkedin"></a>
-              <a href="#" class="index__social index__social--google"><img src="images/google.png" alt="google"></a>
-              <a href="#" class="index__social index__social--linkedin"><img src="images/twitter.png" alt="twitter"></a>
-            </div>
+            <a href="home-initial.html" value="Login" class="btn btn-lg btn-round btn-outline-blue color-blue p- pl+ pr+ mb">Login</a>
+           
           </div>
         </div>
       </div>
@@ -347,4 +343,12 @@ title: Welcome to Pixseb
 
   <script>
   	$( '.js-float-label-wrapper' ).FloatLabel();
+
+  	$(document).on('click', 'a', function(event){
+  	    event.preventDefault();
+
+  	    $('html, body').animate({
+  	        scrollTop: $( $.attr(this, 'href') ).offset().top
+  	    }, 500);
+  	});
   </script>
