--- a/source/partials/_javascripts.html.erb
+++ b/source/partials/_javascripts.html.erb
@@ -14,6 +14,10 @@
 
 <script src="javascripts/jquery.panzoom.min.js"></script>
 
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
 
 <script src="javascripts/Chart.bundle.min.js"></script>
