--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -2,6 +2,7 @@
 	border-radius: 30px;
 	padding-left: 40px;
 	padding-right: 40px;
+	transition: all 0.3s ease-in-out;
 	&.active {
 		background: $blue;
 		color: #fff;
