--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -8,6 +8,20 @@
 			display: flex;
 		}
 	}
+	&:nth-child(2) {
+		.card__handles{
+			.js-move-up {
+				display: none;
+			}
+		}
+	}
+	&:last-child {
+		.card__handles{
+			.js-move-down {
+				display: none;
+			}
+		}
+	}
 	&__title {
 		color: $grey;
 		font-size: 20px;
@@ -68,6 +82,7 @@
 		margin-top: 10px;
 		width: 36px;
 		margin-left: -18px;
+		z-index: 9;
 		i {
 			background: $blue;
 			width: 36px;
