--- a/source/stylesheets/layout/_navbar.scss
+++ b/source/stylesheets/layout/_navbar.scss
@@ -1,6 +1,9 @@
 
 // BOOTSTRAP'S NAVIGATION OVERIDE 
 .navbar {
+  .nav .open > a, .nav .open > a:hover, .nav .open > a:focus, .nav > li > a:hover, .nav > li > a:focus, .nav > li > a:active {
+    background: none;
+  }
 }
 .navbar-nav > li > .dropdown-menu {
     width: 100%;
@@ -56,7 +59,7 @@
     position: absolute;
     bottom: -2px;
     left: 0px;
-    .home & {
+    .home &, .home-initial & {
       display: none;
     }
   }
@@ -110,10 +113,10 @@
         width: 50px;
       }
       .sun-diagram & {
-        width: 390px;
+        width: 440px;
       }
       .export & {
-        width: 560px;
+        width: 640px;
       }
     }
     &:after {
@@ -131,10 +134,10 @@
         left: 50px;
       }
       .sun-diagram & {
-        left: 390px;
+        left: 440px;
       }
       .export & {
-        left: 560px;
+        left: 640px;
       }
     }
     .ionicons {
