--- a/source/sun-diagram.html.erb
+++ b/source/sun-diagram.html.erb
@@ -3,7 +3,7 @@
 <div class="row no-gutter bg-dark-blue-2 df">
 
     <div class="col-sm-8">
-      <div class="sun-diagram__main">
+      <div class="sun-diagram__frame">
         <%= image_tag("sun-diagram.svg", class:"js-panzoom") %>
       </div>
       
@@ -45,8 +45,10 @@
               </a>
             </li>
           </div>
-          <div class="sun-diagram__mini-map">
+          <div class="sun-diagram__mini-map js-panzoom-2">
               <div class="rectangle"></div>
+
+              
           </div>
       </div>
 
@@ -60,24 +62,39 @@
 <%= partial "partials/javascripts" %>
 
 <script>
-  (function() {
+  
+    $(function() {
+      
       var $section = $('body');
       $section.find('.js-panzoom').panzoom({
         $zoomIn: $section.find(".js-zoom-in"),
         $zoomOut: $section.find(".js-zoom-out"),
         $zoomRange: $section.find(".js-zoom-range"),
         $reset: $section.find(".js-reset"),
-        startTransform: 'scale(1.1)',
+        startTransform: 'scale(1)',
         increment: 0.1,
         minScale: 1,
+
         contain: 'automatic'
       }).panzoom('zoom');
-    })();
+      
 
-     // $('.js-zoom-range').slider({
-     //    formatter: function(value) {
-     //      return 'Current value: ' + value;
-     //    }
-     //  });
+      var frameHeight = $(".sun-diagram__frame").height(),
+      frameWidth = $(".sun-diagram__frame").width(),
+      rectangleLeftPos =  $(".rectangle").css("left");
+
+      console.log(rectangleLeftPos);
+
+      $( ".rectangle" ).draggable({
+          containment: ".sun-diagram__mini-map",
+          drag: function(event, ui) {
+                var pos = ui.position;
+                console.log(pos.left-150 + " " + pos.top);
+
+                var $section = $('body');
+                $section.find('.js-panzoom').panzoom("pan", -pos.left-150, -pos.top);
+            }
+      });      
+    });
 
 </script>
